@@ -1,0 +1,1 @@
+    <div id="folder"><a href="$FILEURL"><img border="0" alt="$ALT" src="/icons/$FILETYPE-$TYPE.png"><br>$FILE</a></div>
