@@ -1,1 +1,0 @@
-    <div id="folder"><a href="$FILEURL"><img border="0" alt="$ALT" src="/icons/video-$TYPE.png"><br>$FILE</a></div>
